[tool.poetry]
name = "fenkeysmanagement"
version = "1.0.0"
description = ""
authors = ["brodokk"]

[tool.poetry.scripts]
fenkm = 'fenkeysmanagement:main'

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
