[tool.poetry]
name = "fenkeysmanagement"
version = "1.0.1"
description = "Simple key management. Generate tokens for any usage."
authors = ["brodokk <brodokk@brodokk.space>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/brodokk/FenKeysManagement"
repository = "https://github.com/brodokk/FenKeysManagement"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
fenkm = 'fenkeysmanagement:main'

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
